[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-tower"
version = "0.1.0"
description = "Magic Tower RPG game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.7",
]

[project.scripts]
magic-tower = "magic_tower.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magic_tower"]
